--- a/style/styles.css
+++ b/style/styles.css
@@ -16,13 +16,13 @@ body {
 .container {
     max-width: 550px;
     margin: 0 auto;
-    padding: 0 16px;
+    padding: 0 24px;
 }
 
 /* Header */
 .header {
     width: 100%;
-    margin: 57px 0 0;
+    margin: 24px 0 0;
     padding: 0;
 }
 
@@ -44,7 +44,7 @@ body {
 /* About Text */
 .about-text {
     width: 100%;
-    margin: 12px 0 0;
+    margin: 24px 0 0;
     padding: 0;
 }
 
@@ -113,13 +113,27 @@ body {
 }
 
 .work-history__cell {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
     height: 45px;
     padding: 0;
     border-bottom: 1px solid var(--stroke-showcase);
+}
+
+.work-history__link {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    width: 100%;
+    height: 100%;
     gap: 16px;
+    text-decoration: none;
+    color: inherit;
+}
+
+.work-history:hover .work-history__cell:not(:hover) .work-history__link,
+.work-history:hover .work-history__cell:not(:hover) .work-history__link .work-history__year,
+.work-history:hover .work-history__cell:not(:hover) .work-history__link .work-history__company,
+.work-history:hover .work-history__cell:not(:hover) .work-history__link .work-history__position {
+    color: rgba(0, 0, 0, 0.25);
 }
 
 .work-history__year {
@@ -154,7 +168,7 @@ body {
     padding: 0;
     display: flex;
     flex-direction: column;
-    gap: 100px;
+    gap: 120px;
 }
 
 .work-list-block {
@@ -380,6 +394,7 @@ body {
     }
 
     .phone-showcase--lottie {
+        padding: 0;
         height: 70vw;
         max-height: 360px;
     }
